--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,9 +1,34 @@
 <h1>Listing tags</h1>
-  <ul>
+ <ul>
     <% @tags.each do |tag| %>
         <li> <%= link_to tag.name, tag %> </li>
     <% end %>
   </ul>
 <br>
+
+<!--
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tags.each do |tag| %>
+      <tr>
+        <td> <%= tag.name %> </td>
+        <td><%= link_to 'Show', tag %></td>
+        <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
+        <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+-->
+<br>
+
 
 <%= link_to 'New Tag', new_tag_path %>
