--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -8,3 +8,12 @@
 </ul>
 
 <%= link_to 'Back', tags_path %>
+
+<!--
+<p id="notice"><%= notice %></p>
+
+<p> <%= @tag.name %> </p>
+
+<%= link_to 'Edit', edit_tag_path(@tag) %> |
+<%= link_to 'Back', tags_path %>
+-->
